Fix launch on Linux